--- a/news.html
+++ b/news.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>News & Events — AMC</title>
-<link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>News & Events — AMC</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner">
-    <a class="brand" href="index.html"><img src="assets/img/AMC-No-background.png" alt="AMC logo" height="40"></a>
+    <a class="brand" href="index.html"><img src="assets/img/AMC-No-background.png" alt="AMC logo"></a>
     <nav class="main-nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -19,15 +19,13 @@
   </div>
 </header>
 
-<main class="container page-content">
-<h1>News & Events</h1>
-<div id="latestList" class="card-grid"></div>
+<main class="container">
+  <h1>News & Events</h1>
+  <div id="latestList" class="card-grid"></div>
 </main>
 
 <footer class="site-footer">
-  <div class="container footer-inner">
-    <p>&copy; <span id="year"></span> Asset Management Club — AMC</p>
-  </div>
+  <p>&copy; <span id="year"></span> Asset Management Club — AMC</p>
 </footer>
 
 <script src="assets/js/main.js"></script>
