--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Contact — AMC</title>
-<link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact — AMC</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner">
-    <a class="brand" href="index.html"><img src="assets/img/AMC-No-background.png" alt="AMC logo" height="40"></a>
+    <a class="brand" href="index.html"><img src="assets/img/AMC-No-background.png" alt="AMC logo"></a>
     <nav class="main-nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -19,29 +19,26 @@
   </div>
 </header>
 
-<main class="container page-content contact-page">
-<h1>Contact Us</h1>
-
-<section class="contact-cards">
-  <div class="contact-item">
-    <img src="assets/icons/instagram.svg" alt="Instagram" width="24">
-    <a href="https://www.instagram.com/amc_mn" target="_blank">@amc_mn</a>
-  </div>
-  <div class="contact-item">
-    <img src="assets/icons/facebook.svg" alt="Facebook" width="24">
-    <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Asset Management Club</a>
-  </div>
-  <div class="contact-item">
-    <img src="assets/icons/email.svg" alt="Email" width="24">
-    <a href="mailto:assetmanagementclubmn@gmail.com">Email us</a>
-  </div>
-</section>
+<main class="container">
+  <h1>Contact Us</h1>
+  <section class="contact-cards">
+    <div class="contact-item">
+      <img src="assets/icons/instagram.svg" alt="Instagram" height="24">
+      <a href="https://www.instagram.com/amc_mn" target="_blank">@amc_mn</a>
+    </div>
+    <div class="contact-item">
+      <img src="assets/icons/facebook.svg" alt="Facebook" height="24">
+      <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">AMC Facebook</a>
+    </div>
+    <div class="contact-item">
+      <img src="assets/icons/email.svg" alt="Email" height="24">
+      <a href="mailto:assetmanagementclubmn@gmail.com">assetmanagementclubmn@gmail.com</a>
+    </div>
+  </section>
 </main>
 
 <footer class="site-footer">
-  <div class="container footer-inner">
-    <p>&copy; <span id="year"></span> Asset Management Club — AMC</p>
-  </div>
+  <p>&copy; <span id="year"></span> Asset Management Club — AMC</p>
 </footer>
 
 <script src="assets/js/main.js"></script>
